modified build.gradle to include java-text-utils (display data in table form) fixed adding dishes and adding ingredients command removed unnecessary attributes in dish class, AddDishCommand, parser, etc added a ui method to clear screen everytime user enters a command

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 shadowJar {
     archiveBaseName = "mid"
-    archiveVersion = "v1.1"
+    archiveVersion = "v1.3.1"
     archiveClassifier = null
     archiveAppendix = null
 }
@@ -25,6 +25,7 @@ checkstyle {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.0'
+    compile group: 'com.massisframework', name: 'j-text-utils', version: '0.3.4'
 }
 
 test {
