updated UG and DG, jar file is now v1.3

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ repositories {
 }
 
 shadowJar {
-    archiveBaseName = "mid"
-    archiveVersion = "v1.3.1"
+    archiveBaseName = null
+    archiveVersion = "v1.3"
     archiveClassifier = null
     archiveAppendix = null
 }
