updated UG implemented while loop in Duke class for Dish modified parser to handle more errors

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,14 @@ shadowJar {
     archiveAppendix = null
 }
 
+sourceSets{
+    main {
+        resources {
+            srcDirs = ['src/main/java']
+        }
+    }
+}
+
 checkstyle {
     toolVersion = '8.23'
 }
